# cec-support-agent

./: .boundary-allow.txt  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  BOUNDARY.md  CONTRIBUTING.md  Cargo.toml  FOLLOWUPS.md  HANDOFFS.md  NOTICE  README.md  SECURITY.md  TODOS.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json  wf-audit.js  wf-design.js  wf-integration.js  wf-recon.js
.claude/audit/: confirmed-findings.txt  integration-plan.json
.claude/hooks/: addendum-context.sh  followups-context.sh  handoffs-context.sh  invariant-check.sh  invariant-guard.sh  session-end.sh  session-start.sh  todos-context.sh  tracking-freshness.sh
.claude/memory/: MEMORY.md  README.md  project-repo-identity.md  tracking-discipline-tombstones.md  wsl-ephemeral-durability.md
.claude/recon/: evidence.json  infra.json  inverted.json  pipeline.json  wsl.json
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  consent.rs  dispatch.rs  eula.rs  execute.rs  lib.rs  tool.rs  verify.rs
crates/common/: Cargo.toml
crates/common/src/: candidate.rs  config_class.rs  config_transition.rs  diagnostic.rs  execution.rs  extract.rs  fault.rs  fluency.rs  hash.rs  inventory.rs  lib.rs  plan.rs  prose.rs  stop_codes.rs  verification.rs
crates/common/tests/: fingerprint_salt.rs
crates/corpus-client/: Cargo.toml
crates/corpus-client/src/: authoring.rs  gate.rs  lib.rs  schema.rs  store.rs  stored.rs
crates/corpus-client/tests/: trybuild_leak_barrier.rs
crates/corpus-client/tests/compile_fail/: candidate_not_serializable.rs  candidate_not_serializable.stderr  contribution_struct_literal.rs  contribution_struct_literal.stderr  prose_no_display.rs  prose_no_display.stderr
crates/deid/: Cargo.toml
crates/deid/src/: lib.rs
crates/inference/: Cargo.toml
crates/inference/src/: client.rs  error.rs  lib.rs  types.rs
crates/intake/: Cargo.toml
crates/intake/src/: lib.rs
crates/leakguard/: Cargo.toml
crates/leakguard/src/: lib.rs
crates/panel/: Cargo.toml
crates/panel/src/: lib.rs
crates/provenance/: Cargo.toml
crates/provenance/src/: lib.rs
crates/support-agent/: Cargo.toml
crates/support-agent/src/: audit.rs  main.rs  serve.rs
crates/support-agent/tests/: cli_contract.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: lib.rs
crates/tools-windows/: Cargo.toml
crates/tools-windows/src/: advisory.rs  catalog.rs  lib.rs
docs/: AGENTIC_ADDENDUM.md  api-extension-design.md  consolidated-work-plan.md  corpus-cartography-threat.md  corpus-leak-prevention.md  corpus-lifecycle-design.md  eula-acceptance-playbook.md  evidence-integrity-and-research-checklist.md  execution-mcp-wrapper-spec.md  f4-windows-collector-playbook.md  integration-myown-family.md  integration-rfc-for-chris.md  local-agent-infrastructure.md  operator-runbook.md  partial-resolution-design.md  safe-core-windows-execution-playbook.md  test-validation-fleet-design.md  tool-catalog.md  trusted-corpus-access-trajectory.md  workflow-authoring-guide.md  wsl-ephemeral-state-policy.md
docs/agent/: handoff.md
docs/research/: README.md  claims.md  instrumentation-inventory.md  negative-results.md  panel1-repair-primitives-audit.md  panel1-repair-primitives-corrections.md  panel2-mcp-cli-tools-audit.md  panel2-mcp-cli-tools-catalog.md  prereg-control-lane.md  priority-knowledge-audit.md  priority-knowledge-briefs.md  research-menu-and-status.md  tool-inventory-consolidated.md  windows-stop-codes.md
ops/: provision.sh
scripts/githooks/: pre-commit
tools/: projectops.py  projectops_panel.py  projectops_server.py
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
