[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "AGPL-3.0-only"
repository = "https://github.com/nathanfraske/cec-support-agent"

[workspace.dependencies]
# Internal crates (path deps so the workspace builds with no registry entry).
common = { path = "crates/common" }
inference = { path = "crates/inference" }
intake = { path = "crates/intake" }
provenance = { path = "crates/provenance" }
agent-core = { path = "crates/agent-core" }
tools-windows = { path = "crates/tools-windows" }
panel = { path = "crates/panel" }
swarm = { path = "crates/swarm" }
corpus-client = { path = "crates/corpus-client" }

# Third-party
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.2"

[profile.release]
# Static, lean release binaries for the cross-target matrix.
strip = true
lto = "thin"
