[package]
name = "agent-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent runtime: the Tool trait, a consent-gated dispatcher, and a minimal execution loop."

[dependencies]
common = { workspace = true }
inference = { workspace = true }
provenance = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
