[package]
name = "common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types for the cec-support-agent engine: Plan, Candidate, FaultSignature, DiagnosticEvent."

[dependencies]
serde = { workspace = true }
