[package]
name = "common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types for the cec-support-agent engine: Plan, Candidate, FaultSignature, DiagnosticEvent."

[dependencies]
serde = { workspace = true }
# The keyed content fingerprint (leak-C7): HMAC-SHA256 under a per-deployment
# salt. These replaced the dependency-free FNV-1a, whose unsalted output was
# dictionary-reversible.
hmac = { workspace = true }
sha2 = { workspace = true }
