[package]
name = "intake"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Intake judge: maps a support request to a structured case via the standard helpdesk interview (CompTIA step 1), asking only the follow-up questions the initial description leaves open."

[dependencies]
common = { workspace = true }
inference = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
