[package]
name = "provenance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Plan provenance: the judge signs winning plans (HMAC-SHA256 over canonical JSON) and the on-machine executor verifies the signature before any step runs."

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
