[package]
name = "swarm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Swarm: dispatch candidate generation to trusted nodes and coordinate sandbox-VM validation."

[dependencies]
common = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
