[package]
name = "tools-windows"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows diagnostic and remediation tools (CIM, event log/WER, registry-with-backup). Compiles as a stub on non-Windows hosts."

[dependencies]
common = { workspace = true }
agent-core = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
